ajout du deviceorientation sur la compass + correction d'un dernier bout de CSS non aligné

--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -103,7 +103,8 @@ p {
   font-weight: 800;
   font-size: 32px;
 }
-.signup-h2 {
+.signup-h2,
+.login-h2 {
   text-align: center;
   font-weight: 800;
   font-size: 32px;
